cmake_minimum_required(VERSION 3.24)
project(CS162)

set(CMAKE_CXX_STANDARD 17)

add_executable(CS162 main.cpp Assignments/wk3/wk3_polygonClass_jfleenor.cpp Assignments/wk3/RegularPolygon.cpp Assignments/wk3/RegularPolygon.h Assignments/wk4/wk4_GradesHelpers_jfleenor.cpp Assignments/wk4/wk4_CircleClass_jfleenor.cpp Assignments/wk4/Grades.cpp Assignments/wk4/Grades.h)
